<resources>
    <string name="app_name">MemoApp</string>

    <string name="email">E-mail</string>

    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="text_register">Don\'t have login and password? Register!</string>
    <string name="register">Register!</string>
    <string name="fill_username">Fill username</string>
    <string name="fill_password">Fill password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="sign_up">Sign up</string>

    <string name="registration_error">Registration failed, please try again</string>
    <string name="email_sent">Email has been sent to %1$s</string>
    <string name="info">Info</string>
    <string name="email_or_password_wrong">Email or password is wrong</string>

    <string name="date_mem">Date of mem</string>

    <string name="mem_description">Mem Description</string>
    <string name="create">Post</string>
    <string name="pick_image_intent_title">Pick image</string>
    <string name="memo_title">Title</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="memo_create_error">Memo creation error</string>
    <string name="memo_title_error">Fill the title</string>
    <string name="memo_description_error">Fill the description</string>
    <string name="memo_date_error">Set date</string>
    <string name="memo_img_error">Choose image</string>
    <string name="warning">Warning</string>
    <string name="memo_create_exit_msg">All changes is going to be discarded. Are you sure you want to discard?</string>
    <string name="yes">Yes</string>
    <string name="memo_does_not_changed">Memo does not changed</string>
    <string name="exit_app">Exit</string>
    <string name="exit_msg">Are you sure want to exit from the Memo app?</string>
    <string name="cancel">Cancel</string>

</resources>
