<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginFragment"
    android:background="@color/colorPrimary"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_form"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="@dimen/font_large"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:id="@+id/linear_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/spacing_55"
        android:paddingRight="@dimen/spacing_55"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:background="@android:color/transparent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AuthUserNameFieldStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:textColorHint="@android:color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAuthButton"
            android:background="@android:color/transparent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AuthPasswordFieldStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/login"
            style="@style/AuthButtonStyle"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:layout_marginBottom="10dp"
        android:text="@string/text_register"
        android:textColor="@android:color/white"
        android:gravity="center"
        />

</RelativeLayout>