<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCloseRegister"
            android:src="@drawable/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            android:padding="@dimen/spacing_normal"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearFormRegister"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textSize="@dimen/font_large"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:id="@+id/linearFormRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/spacing_55"
            android:paddingRight="@dimen/spacing_55"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgRegister"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_person"
                app:tint="@android:color/white"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                android:background="@android:color/transparent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AuthUserNameFieldStyle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:textColorHint="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAuthButton"
                android:background="@android:color/transparent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AuthPasswordFieldStyle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:textColorHint="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAuthButton"
                android:background="@android:color/transparent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    style="@style/AuthPasswordFieldStyle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/register_btn"
                style="@style/AuthButtonStyle"
                />

        </LinearLayout>


    </RelativeLayout>

</layout>
